<resources>
    <string name="app_name">load</string>

    <!-- ########### BookkeepingFragment start ########### -->
    <string name="navigation_drawer_close">close</string>
    <string name="navigation_drawer_open">open</string>
    <string name="load_activity_bar_msg">msg</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="other">other</string>
    <string name="account_books_type">账簿</string>
    <string name="nav_count">统计</string>
    <!-- ########### BookkeepingFragment end ########### -->

    <!-- ########### AboutActivity start ########### -->
    <string name="current_version">App版本</string>
    <string name="open_source_url">项目地址</string>
    <string name="open_source_url_content">https://github.com/AndroidAndYang/AndroidNotepad</string>
    <string name="about_author">关于我</string>
    <string name="about_author_content">https://blog.csdn.net/weixin_37185329</string>
    <string name="advice_feedback">意见反馈</string>
    <string name="advice_feedback_content">向作者提供反馈意见</string>
    <string name="open_source_license">开放源代码许可</string>
    <string name="copyright">Copyright © 2018 Yang</string>
    <!-- ########### AboutActivity end ########### -->

    <!-- BookkeepingEditFragment -->
    <string name="mark">备注：</string>
    <string name="mark_hint">点击写备注...</string>

</resources>
