<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_account_books_type"
            android:icon="@drawable/ic_launcher"
            android:title="@string/account_books_type" />
        <item
            android:id="@+id/nav_count"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav_count" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_launcher"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_launcher"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
